# wars

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.MD  Cargo.toml  INSTALL.MD  INSTALL.md  LICENSE  LICENSE.md  README.MD  README.md  config.in  linux-setup.sh  my-linux-setup.sh  my-setup.sh  setup.bat  setup.sh
.github/workflows/: codeql-analysis.yml  rust.yml
Application/share/wars/asset-projects/: TextureAtlas.xcf
Sources/: CMakeLists.txt  Main.cpp  MenuScene.cpp  MenuScene.hpp
assets/shaders/: 2d_renderer_basic.fs  2d_renderer_basic.vs  dummy.fs  dummy.vs
cmake/: FindGLFW.cmake
gimp/: texture-atlas-0.xcf  texture-atlas-1.xcf
include/: CMakeLists.txt  Game.hpp  GameOptions.hpp  Input.hpp  Math.hpp  Scene.hpp  Window.hpp  cmake_config.ini  engine.hpp  pch.hpp
include/KHR/: CMakeLists.txt
include/engine/: CMakeLists.txt  window.hpp
include/engine/events/: CMakeLists.txt  event.hpp  event_dispatcher.hpp  event_listener.hpp  event_queues.hpp  event_type.hpp  key_press_event.hpp
include/glad/: CMakeLists.txt
include/graphics/: CMakeLists.txt  Material.hpp  Mesh.hpp  ProjectionMatrix.hpp  Shader.hpp  ShaderManager.hpp  Shaders.hpp  Sprite.hpp  Texture.hpp  TextureAtlas.hpp  TextureAtlasManager.hpp  Vertex.hpp  basic-utils.hpp
include/math/: CMakeLists.txt  Matrix4.hpp  Vector2.hpp  Vector3.hpp
include/scenes/: CMakeLists.txt  TestScene.hpp
include/utils/: CMakeLists.txt  file-utils.hpp
scripts/: resource_compiler.py
shaders/: solid_color.glsl  textured.glsl
src/: CMakeLists.txt  Game.cpp  GameOptions.cpp  Input.cpp  Scene.cpp  Window.cpp  core.rs  engine.cpp  game.rs  graphics.rs  lib.rs  main.cpp  main.rs  math.rs  scenes.rs  ui.rs  window.rs
src/engine/: CMakeLists.txt  window.cpp
src/engine/events/: CMakeLists.txt  event.cpp  event_dispatcher.cpp  event_listener.cpp  event_queues.cpp  key_press_event.cpp
src/glad/: CMakeLists.txt
src/graphics/: CMakeLists.txt  Material.cpp  Mesh.cpp  ProjectionMatrix.cpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Shaders.cpp  Sprite.cpp  TextureAtlas.cpp  TextureAtlasManager.cpp  basic-utils.cpp  gldb.cpp  gldb.hpp
src/scenes/: CMakeLists.txt  TestScene.cpp
src/stb-image/: CMakeLists.txt
src/utils/: CMakeLists.txt  file-utils.cpp
src/wars/: Application.cpp  Application.hpp  CMakeLists.txt  CollisionBox.cpp  CollisionBox.hpp  Input.cpp  Input.hpp  Resources.hpp  Scene.cpp  Scene.hpp  Scenes.cpp  Scenes.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp  wars.cpp
src/wars/Resources/: CMakeLists.txt  Resources.cpp  prepareMeshes.cpp
src/wars/Scenes/: CMakeLists.txt  Scene0.cpp  Scene0.hpp  Scene1.cpp  Scene1.hpp
src/wars/sprite-types/: Bullet.cpp  Bullet.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Player.cpp  Player.hpp  Zombie.cpp  Zombie.hpp
wars/: Cargo.toml
wars/src/: graphics.rs  lib.rs  main.rs  physics.rs  scenes.rs
